src-tauri/build_errors.txt
cargo :    Compiling dev-jan
itor-v2 v0.1.0 (C:\Users\818
09\Desktop\娓呴亾澶玕Dev-Janitor\
dev-janitor-v2\src-tauri)
所在位置 行:1 字符: 30
+ cd dev-janitor-v2/src-taur
i; cargo build 2>&1 | Out-Fi
le -Encoding ut ...
+                           
   ~~~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (   Co  
  mpiling de...r-v2\src-t   
 auri):String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
error: argument never used
   --> src\detection\mod.rs:
520:17
    |
519 |                 "\\.py
env\\pyenv-win\\versions",
    |                 ------
------------------------- fo
rmatting specifier missing
520 |                 home
    |                 ^^^^ a
rgument never used
    |
help: format specifiers use 
curly braces, consider addin
g a format specifier
    |
519 |                 "\\.py
env\\pyenv-win\\versions{}",
    |                       
                        ++

error[E0107]: type alias tak
es 1 generic argument but 2 
generic arguments were suppl
ied
  --> src\error.rs:24:46
   |
24 |     fn serialize<S>(&se
lf, serializer: S) -> Result
<S::Ok, S::Error>
   |                        
                      ^^^^^^
      ---------- help: remov
e the unnecessary generic ar
gument
   |                        
                      |
   |                        
                      expect
ed 1 generic argument
   |
note: type alias defined her
e, with 1 generic parameter:
 `T`
  --> src\error.rs:32:10
   |
32 | pub type Result<T> = st
d::result::Result<T, DevJani
torError>;
   |          ^^^^^^ -

error[E0053]: method `serial
ize` has an incompatible typ
e for trait
  --> src\error.rs:24:46
   |
24 |     fn serialize<S>(&se
lf, serializer: S) -> Result
<S::Ok, S::Error>
   |                        
                      ^^^^^^
^^^^^^^^^^^^^^^^^ expected a
ssociated type, found `DevJa
nitorError`
   |
   = note: expected signatur
e `fn(&DevJanitorError, _) -
> std::result::Result<_, <S 
as Serializer>::Error>`
              found signatur
e `fn(&DevJanitorError, _) -
> std::result::Result<_, Dev
JanitorError>`
help: change the output type
 to match the trait
   |
24 -     fn serialize<S>(&se
lf, serializer: S) -> Result
<S::Ok, S::Error>
24 +     fn serialize<S>(&se
lf, serializer: S) -> std::r
esult::Result<<S as Serializ
er>::Ok, <S as Serializer>::
Error>
   |

error[E0308]: mismatched typ
es
  --> src\error.rs:28:9
   |
24 |     fn serialize<S>(&se
lf, serializer: S) -> Result
<S::Ok, S::Error>
   |                        
                      ------
----------------- expected `
std::result::Result<<S as Se
rializer>::Ok, DevJanitorErr
or>` because of return type
...
28 |         serializer.seri
alize_str(&self.to_string())
   |         ^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 expected `DevJanitorError`,
 found associated type
   |
   = note: expected enum `st
d::result::Result<_, DevJani
torError>`
              found enum `st
d::result::Result<_, <S as S
erializer>::Error>`
help: consider constraining 
the associated type `<S as S
erializer>::Error` to `DevJa
nitorError`
   |
26 |         S: serde::Seria
lizer<Error = DevJanitorErro
r>,
   |                        
     +++++++++++++++++++++++
++

Some errors have detailed ex
planations: E0053, E0107, E0
308.
For more information about a
n error, try `rustc --explai
n E0053`.
error: could not compile `de
v-janitor-v2` (lib) due to 4
 previous errors
